--- a/index.html
+++ b/index.html
@@ -329,8 +329,7 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; 2019 JK. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
-
+<div class="page__footer-copyright">&copy; 2019 Jay Khatri.       
       </footer>
     </div>
 
