--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
       <nav id="site-nav" class="greedy-nav">
         
         <a class="site-title" href="/">JK</a>
-        <ul class="visible-links"><li class="masthead__menu-item">
+        <ul class="visible-links">
+          <li class="masthead__menu-item">
               <a href="/about/" >About</a>
-            </li></ul>
+          </li>
+        </ul>
         
         <button class="greedy-nav__toggle hidden" type="button">
           <span class="visually-hidden">Toggle menu</span>
