--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <html>
   <header><title>This is title</title></header>
 <body>
-Hello world
-</body>
+  Hi, I'm Jay 👋. I'm an engineer, product designer and entrepreneur. I'm the former CEO of <a href="https://getreploy.com">Reploy</a> and I'm now working on something new ⚙️.
+
+  <br>
+  <br>
+
+
+> Interests
+  <br>
+In school, I had interests in hardware/software co-design, software architecture and robotics. My personal projects reflected this. After taking a few jobs throughout college, I developed a deep interest/understanding of web infrastructure.
+ 
+  <br>
+  <br>
+> Past
+  <br>
+In the recent past, I've spent time working on product at <a href="joinhandshake.com">Handshake</a>, anti-abuse infrastructure at <a href="google.com">Google</a>, and most recently on machine learning infra at <a href="deepmind.com">Deepmind</a>.
+In high school, I was a captain of the 2015 FTC World Championship <a href="https://www.theledger.com/article/LK/20140313/News/608076751/LL/">Robotics team</a>, where I had a strong focus in mechanical design and electronics. 
+
+<br>
+<br>
+> Let's Chat
+<br>
+Wanna get in touch? Follow me on <a href="https://twitter.com/Jay_NotTheBird">twitter</a>, shoot me an email at j [at] jaykhatri.com or yell my name really loudly (it works, I promise).</body>
 </html>
