--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <header><title>This is title</title></header>
 <body>
-  Hi, I'm Jay 👋. I'm an engineer, product designer and entrepreneur. I'm the former CEO of <a href="https://getreploy.com">Reploy</a> and I'm now working on something new ⚙️.
+  Hi, I'm Jay 👋. I'm an engineer, product designer and entrepreneur. I'm the former CEO/co-founder of <a href="https://getreploy.com">Reploy</a>, where I built out the whole product and drove sales from 0 -> $3k in 3 weeks. I'm now working on something new 😇 ⚙️ .
 
   <br>
   <br>
@@ -15,12 +15,12 @@ In school, I had interests in hardware/software co-design, software architecture
   <br>
 > Past
   <br>
-In the recent past, I've spent time working on product at <a href="joinhandshake.com">Handshake</a>, anti-abuse infrastructure at <a href="google.com">Google</a>, and most recently on machine learning infra at <a href="deepmind.com">Deepmind</a>.
-In high school, I was a captain of the 2015 FTC World Championship <a href="https://www.theledger.com/article/LK/20140313/News/608076751/LL/">Robotics team</a>, where I had a strong focus in mechanical design and electronics. 
+In the recent past, I've spent time working on product at <a target="_blank" href="https://joinhandshake.com">Handshake</a>, anti-abuse infrastructure at <a target="_blank" href="https://cloud.google.com">Google</a>, and most recently on machine learning infra at <a target="_blank" href="deepmind.com">Deepmind</a>.
+In high school, I was a captain of the 2015 FTC World Championship <a target="_blank" href="https://www.theledger.com/article/LK/20140313/News/608076751/LL/">Robotics team</a>, where I had a strong focus in mechanical design and electronics. 
 
 <br>
 <br>
 > Let's Chat
 <br>
-Wanna get in touch? Follow me on <a href="https://twitter.com/Jay_NotTheBird">twitter</a>, shoot me an email at j [at] jaykhatri.com or yell my name really loudly (it works, I promise).</body>
+Wanna get in touch? Follow me on <a href="https://twitter.com/Jay_NotTheBird">twitter</a>, shoot me an email at j [at] jaykhatri.com or yell my name really loudly 🎤 (it works, I promise).</body>
 </html>
