--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <header><title>This is title</title></header>
 <body>
-  Hi, I'm Jay 👋. I'm an engineer, product designer and entrepreneur. I'm the former CEO/co-founder of <a href="https://getreploy.com">Reploy</a>, where I built out the whole product and drove sales from 0 -> $3k in 3 weeks. I'm now working on something new 😇 ⚙️ .
+  Hi, I'm Jay 👋. I'm an engineer, product designer and entrepreneur. I'm the former CEO/co-founder of <a href="https://getreploy.com">Reploy</a>. I'm now working on something new 😇 ⚙️ .
 
   <br>
   <br>
@@ -15,6 +15,7 @@ In school, I had interests in hardware/software co-design, software architecture
   <br>
 > Past
   <br>
+  Most recently, I built <a href="https://getreploy.com">Reploy</a> (<a href="https://www.producthunt.com/posts/reploy">product hunt</a>, <a href="https://news.ycombinator.com/item?id=23917956">hn</a>), where I built/designed the whole product and drove sales from 0 -> $3k MRR in 3 weeks. At its core, Reploy used k8s to schedule ephemeral environments.
 In the recent past, I've spent time working on product at <a target="_blank" href="https://joinhandshake.com">Handshake</a>, anti-abuse infrastructure at <a target="_blank" href="https://cloud.google.com">Google</a>, and most recently on machine learning infra at <a target="_blank" href="deepmind.com">Deepmind</a>.
 In high school, I was a captain of the 2015 FTC World Championship <a target="_blank" href="https://www.theledger.com/article/LK/20140313/News/608076751/LL/">Robotics team</a>, where I had a strong focus in mechanical design and electronics. 
 
