--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <header><title>This is title</title></header>
 <body>
-  Hi, I'm Jay 👋. I'm an engineer, product designer and entrepreneur. I'm the former CEO/co-founder of <a href="https://getreploy.com">Reploy</a>. I'm now working on something new 😇 ⚙️ .
+  Hi, I'm Jay 👋. I'm an engineer, product designer and entrepreneur. I'm the former CEO/co-founder of <a href="https://getreploy.com">Reploy</a> (YC S20). I'm now working on something new 😇 ⚙️ .
 
   <br>
   <br>
