--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@ In high school, I was a captain of the 2015 FTC World Championship <a target="_b
 <br>
 > Let's Chat
 <br>
-Wanna get in touch? Follow me on <a href="https://twitter.com/Jay_NotTheBird">twitter</a>, shoot me an email at j [at] jaykhatri.com or yell my name really loudly 🎤 (it works, I promise).</body>
+Wanna get in touch? Follow/DM me on <a href="https://twitter.com/Jay_NotTheBird">twitter</a>, shoot me an email at j [at] jaykhatri.com or yell my name really loudly 🎤 (it works, I promise).</body>
 </html>
