--- a/index.html
+++ b/index.html
@@ -1,29 +1,55 @@
 <html>
   <header><title>Jay K.</title></header>
+  <link rel="stylesheet" type="text/css" href="index.css" />
   <script src="http://localhost:8080/index.js"></script>
   <script src="https://js-client.onrender.com/index.js"></script>
-<body style="background-color: white;">
-  Hi, I'm Jay 👋. I'm an engineer, product designer and entrepreneur. I'm the former CEO/co-founder of <a href="https://getreploy.com">Reploy</a> (YC S20). I'm now working on something new 😇 ⚙️ .
+  <body>
+    Hi, I'm Jay 👋. I'm an engineer and product designer. I'm the former ceo and
+    co-founder of <a href="https://getreploy.com">Reploy</a> (YC S20).
 
-  <br>
-  <br>
+    <br />
+    <br />
 
+    > Interests
+    <br />
+    <br />
+    In school, I had interests in hardware/software co-design, software
+    architecture and robotics. After taking a few jobs throughout college, I
+    developed a deep interest in web infrastructure and developing the future of
+    the internet.
 
-> Interests
-  <br>
-In school, I had interests in hardware/software co-design, software architecture and robotics. My personal projects reflected this. After taking a few jobs throughout college, I developed a deep interest/understanding of web infrastructure.
- 
-  <br>
-  <br>
-> Past
-  <br>
-  Most recently, I built <a href="https://getreploy.com">Reploy</a> (<a href="https://www.producthunt.com/posts/reploy">product hunt</a>, <a href="https://news.ycombinator.com/item?id=23917956">hn</a>), where I built/designed the whole product and drove sales from 0 -> $3k MRR in 3 weeks. At its core, Reploy used k8s to schedule ephemeral environments.
-In the recent past, I've spent time working on product at <a target="_blank" href="https://joinhandshake.com">Handshake</a>, anti-abuse infrastructure at <a target="_blank" href="https://cloud.google.com">Google</a>, and most recently on machine learning infra at <a target="_blank" href="deepmind.com">Deepmind</a>.
-In high school, I was a captain of the 2015 FTC World Championship <a target="_blank" href="https://www.theledger.com/article/LK/20140313/News/608076751/LL/">Robotics team</a>, where I had a strong focus in mechanical design and electronics. 
+    <br />
+    <br />
+    > Past
+    <br />
+    <br />
+    Most recently, I worked on <a href="https://getreploy.com">Reploy</a> (<a
+      href="https://www.producthunt.com/posts/reploy"
+      >product hunt</a
+    >, <a href="https://news.ycombinator.com/item?id=23917956">hn</a>), where I
+    built/designed the product and drove sales from 0 -> $3k MRR in 3 weeks. At
+    its core, Reploy used k8s to schedule ephemeral environments. In the recent
+    past, I've spent time working on product at
+    <a target="_blank" href="https://joinhandshake.com">Handshake</a>,
+    anti-abuse infrastructure at
+    <a target="_blank" href="https://cloud.google.com">Google</a>, and most
+    recently on machine learning infra at
+    <a target="_blank" href="deepmind.com">Deepmind</a>. In high school, I was a
+    captain of the 2015 FTC World Championship
+    <a
+      target="_blank"
+      href="https://www.theledger.com/article/LK/20140313/News/608076751/LL/"
+      >Robotics team</a
+    >, where I had a strong focus in mechanical design and electronics.
 
-<br>
-<br>
-> Let's Chat
-<br>
-Wanna get in touch? Follow/DM me on <a href="https://twitter.com/Jay_NotTheBird">twitter</a>, shoot me an email at j [at] jaykhatri.com or yell my name really loudly 🎤 (it works, I promise).</body>
+    <br />
+    <br />
+    > Let's Chat
+    <br />
+    <br />
+    Wanna get in touch? Follow/DM me on
+    <a href="https://twitter.com/Jay_NotTheBird">twitter</a>, shoot me an email
+    at j [at] jaykhatri.com or yell my name really loudly 🎤 (it works, I
+    promise).
+  </body>
 </html>
