--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       target="_blank"
       href="https://www.theledger.com/article/LK/20140313/News/608076751/LL/"
       >Robotics team</a
-    >, where I had a strong focus in mechanical design and electronics.
+    >, which started my wanderings in tech.
 
     <br />
     <br />
