--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       >product hunt</a
     >, <a href="https://news.ycombinator.com/item?id=23917956">hn</a>), where I
     built/designed the product and drove sales from 0 -> $3k MRR in 3 weeks. At
-    its core, Reploy used k8s to schedule ephemeral environments. In the recent
-    past, I've spent time working on product at
+    its core, Reploy used <a href="https://kubernetes.io/">kubernetes</a> to
+    schedule ephemeral environments. In the recent past, I've spent time working
+    on product at
     <a target="_blank" href="https://joinhandshake.com">Handshake</a>,
     anti-abuse infrastructure at
     <a target="_blank" href="https://cloud.google.com">Google</a>, and most
