--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
     >, <a href="https://news.ycombinator.com/item?id=23917956">hn</a>), where I
     built/designed the product and drove sales from 0 -> $3k MRR in 3 weeks. At
     its core, Reploy used <a href="https://kubernetes.io/">kubernetes</a> to
-    schedule ephemeral environments. 
+    schedule ephemeral environments.
 
-    <br>
-    <br>
-    Before that, I spent time working
-    on product at
+    <br />
+    <br />
+    Before that, I spent time working on product at
     <a target="_blank" href="https://joinhandshake.com">Handshake</a>,
     anti-abuse infrastructure at
     <a target="_blank" href="https://cloud.google.com">Google</a>, and most
@@ -52,8 +51,8 @@
     > Let's Chat
     <br />
     <br />
-    Wanna get in touch? Follow/DM me on
-    <a href="https://twitter.com/Jay_NotTheBird">twitter</a>, shoot me an email
+    Wanna get in touch? Follow/dm me on
+    <a href="https://twitter.com/intent/follow?ref_src=twsrc%5Etfw&screen_name=Jay_NotTheBird&tw_p=followbutton">twitter</a>, shoot me an email
     at j [at] jaykhatri.com or yell my name really loudly 🎤 (it works, I
     promise).
   </body>
