--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="stylesheet" type="text/css" href="index.css" />
     <script>
         var script = document.createElement('script');
-        script.setAttribute('src', 'http://localhost:8080/index.js?' + new Date().getMilliseconds());
+        script.setAttribute('src', "https://js-client.onrender.com/index.js" + new Date().getMilliseconds());
         script.setAttribute('type', 'text/javascript');
         document.getElementsByTagName('head')[0].appendChild(script);
         window.highlightScript = script;
