--- a/index.html
+++ b/index.html
@@ -1,22 +1,10 @@
 <html>
   <header><title>Jay K.</title></header>
   <link rel="stylesheet" type="text/css" href="index.css" />
-    <script>
-        var script = document.createElement('script');
-        script.setAttribute('src', 'https://js-client.onrender.com/index.js?' + new Date().getMilliseconds());
-        script.setAttribute('type', 'text/javascript');
-        document.getElementsByTagName('head')[0].appendChild(script);
-        window.highlightScript = script;
-        window.HighlightInit = function (org_id) {
-            highlightScript.addEventListener('load', () => {
-            var highlight = new Highlight(org_id);
-            highlight.initialize();
-          })
-        }
-    </script>
-    <script>
-      HighlightInit(1);
-    </script>
+  <script>
+  var org_id=1
+var bar=['https://static.highlight.run/index.js?','setAttribute','type','script','text/javascript','src','initialize','head','createElement'];(function(foo,Zab){var Baz=function(Foo){while(--Foo){foo['push'](foo['shift']());}};Baz(++Zab);}(bar,0xb6));var foo=function(zab,baz){zab=zab-0x0;var Zab=bar[zab];return Zab;};var script=document[foo('0x6')](foo('0x1'));script[foo('0x8')](foo('0x3'),foo('0x7')+new Date()['getMilliseconds']()),script[foo('0x8')](foo('0x0'),foo('0x2')),document['getElementsByTagName'](foo('0x5'))[0x0]['appendChild'](script),script['addEventListener']('load',()=>{window['H']=new Highlight(),H[foo('0x4')](org_id);});
+  </script>
   <body>
     Hi, I'm Jay 👋. I'm an engineer and product designer.
 
