--- a/index.html
+++ b/index.html
@@ -1,83 +1,74 @@
 <html>
-  <header><title>Jay K.</title></header>
-  <link rel="stylesheet" type="text/css" href="index.css" />
-  <script>
-  var org_id=1
-var bar=['https://static.highlight.run/index.js?','setAttribute','type','script','text/javascript','src','initialize','head','createElement'];(function(foo,Zab){var Baz=function(Foo){while(--Foo){foo['push'](foo['shift']());}};Baz(++Zab);}(bar,0xb6));var foo=function(zab,baz){zab=zab-0x0;var Zab=bar[zab];return Zab;};var script=document[foo('0x6')](foo('0x1'));script[foo('0x8')](foo('0x3'),foo('0x7')+new Date()['getMilliseconds']()),script[foo('0x8')](foo('0x0'),foo('0x2')),document['getElementsByTagName'](foo('0x5'))[0x0]['appendChild'](script),script['addEventListener']('load',()=>{window['H']=new Highlight(),H[foo('0x4')](org_id);});
-  </script>
-  <script>
-window['_fs_debug'] = false;
-window['_fs_host'] = 'fullstory.com';
-window['_fs_script'] = 'edge.fullstory.com/s/fs.js';
-window['_fs_org'] = 'XZQ0S';
-window['_fs_namespace'] = 'FS';
-(function(m,n,e,t,l,o,g,y){
-    if (e in m) {if(m.console && m.console.log) { m.console.log('FullStory namespace conflict. Please set window["_fs_namespace"].');} return;}
-    g=m[e]=function(a,b,s){g.q?g.q.push([a,b,s]):g._api(a,b,s);};g.q=[];
-    o=n.createElement(t);o.async=1;o.crossOrigin='anonymous';o.src='https://'+_fs_script;
-    y=n.getElementsByTagName(t)[0];y.parentNode.insertBefore(o,y);
-    g.identify=function(i,v,s){g(l,{uid:i},s);if(v)g(l,v,s)};g.setUserVars=function(v,s){g(l,v,s)};g.event=function(i,v,s){g('event',{n:i,p:v},s)};
-    g.anonymize=function(){g.identify(!!0)};
-    g.shutdown=function(){g("rec",!1)};g.restart=function(){g("rec",!0)};
-    g.log = function(a,b){g("log",[a,b])};
-    g.consent=function(a){g("consent",!arguments.length||a)};
-    g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
-    g.clearUserCookie=function(){};
-    g._w={};y='XMLHttpRequest';g._w[y]=m[y];y='fetch';g._w[y]=m[y];
-    if(m[y])m[y]=function(){return g._w[y].apply(this,arguments)};
-    g._v="1.2.0";
-})(window,document,window['_fs_namespace'],'script','user');
-</script>
-  <body>
-    Hi, I'm Jay 👋. I'm an engineer and product designer.
+	<header><title>Jay K.</title></header>
+	<link rel="stylesheet" type="text/css" href="index.css" />
+	<script>
+		window["_h_debug"] = true;
+		window["_h_script"] = "http://localhost:8080/dist/index.js";
+		window["_h_org"] = 2;
+	</script>
+	<script src="http://localhost:8080/dist/firstload.js" />
+	<script>
+		var num = Math.round(Math.random());
+		if (num == 0) {
+			H.identify("hi@hi.com", { chicken: "hi" });
+		} else {
+			H.identify("hello@hello.com", { chicken: "hi" });
+		}
+	</script>
+	<body>
+		Hi, I'm Jay 👋. I'm an engineer and product designer.
 
-    <br />
-    <br />
+		<br />
+		<br />
 
-    > Interests
-    <br />
-    <br />
-    In school, I had interests in hardware/software co-design, software
-    architecture and robotics. After taking a few jobs throughout college, I
-    developed a deep interest in web infrastructure and developing the future of
-    the internet.
+		> Interests
+		<br />
+		<br />
+		In school, I had interests in hardware/software co-design, software
+		architecture and robotics. After taking a few jobs throughout college, I
+		developed a deep interest in web infrastructure and developing the
+		future of the internet.
 
-    <br />
-    <br />
-    > Past
-    <br />
-    <br />
-    Most recently, I worked on <a href="https://getreploy.com">Reploy</a> (<a
-      href="https://www.producthunt.com/posts/reploy"
-      >product hunt</a
-    >, <a href="https://news.ycombinator.com/item?id=23917956">hn</a>), where I
-    built/designed the product and drove sales from 0 -> $3k MRR in 3 weeks. At
-    its core, Reploy used <a href="https://kubernetes.io/">kubernetes</a> to
-    schedule ephemeral environments.
+		<br />
+		<br />
+		> Past
+		<br />
+		<br />
+		Most recently, I worked on
+		<a href="https://getreploy.com">Reploy</a> (<a
+			href="https://www.producthunt.com/posts/reploy"
+			>product hunt</a
+		>, <a href="https://news.ycombinator.com/item?id=23917956">hn</a>),
+		where I built/designed the product and drove sales from 0 -> $3k MRR in
+		3 weeks. At its core, Reploy used
+		<a href="https://kubernetes.io/">kubernetes</a> to schedule ephemeral
+		environments.
 
-    <br />
-    <br />
-    Before that, I spent time working on product at
-    <a target="_blank" href="https://joinhandshake.com">Handshake</a>,
-    anti-abuse infrastructure at
-    <a target="_blank" href="https://cloud.google.com">Google</a>, and most
-    recently on machine learning infra at
-    <a target="_blank" href="deepmind.com">Deepmind</a>. In high school, I was a
-    captain of the 2015 FTC World Championship
-    <a
-      target="_blank"
-      href="https://www.theledger.com/article/LK/20140313/News/608076751/LL/"
-      >Robotics team</a
-    >, which started my wanderings in tech.
+		<br />
+		<br />
+		Before that, I spent time working on product at
+		<a target="_blank" href="https://joinhandshake.com">Handshake</a>,
+		anti-abuse infrastructure at
+		<a target="_blank" href="https://cloud.google.com">Google</a>, and most
+		recently on machine learning infra at
+		<a target="_blank" href="deepmind.com">Deepmind</a>. In high school, I
+		was a captain of the 2015 FTC World Championship
+		<a
+			target="_blank"
+			href="https://www.theledger.com/article/LK/20140313/News/608076751/LL/"
+			>Robotics team</a
+		>, which started my wanderings in tech.
 
-    <br />
-    <br />
-    > Let's Chat
-    <br />
-    <br />
-    Wanna get in touch? Follow/dm me on
-    <a href="https://twitter.com/intent/follow?ref_src=twsrc%5Etfw&screen_name=Jay_NotTheBird&tw_p=followbutton">twitter</a>, shoot me an email
-    at j [at] jaykhatri.com or yell my name really loudly 🎤 (it works, I
-    promise).
-  </body>
+		<br />
+		<br />
+		> Let's Chat
+		<br />
+		<br />
+		Wanna get in touch? Follow/dm me on
+		<a
+			href="https://twitter.com/intent/follow?ref_src=twsrc%5Etfw&screen_name=Jay_NotTheBird&tw_p=followbutton"
+			>twitter</a
+		>, shoot me an email at j [at] jaykhatri.com or yell my name really
+		loudly 🎤 (it works, I promise).
+	</body>
 </html>
