--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<header><title>Jay K.</title></header>
 	<link rel="stylesheet" type="text/css" href="index.css" />
+	<link rel="stylesheet" href="https://unpkg.com/xp.css" />
 	<script>
 		window["_h_debug"] = true;
 		window["_h_script"] = "http://localhost:8080/dist/index.js";
@@ -16,59 +17,71 @@
 		}
 	</script>
 	<body>
-		Hi, I'm Jay 👋. I'm an engineer and product designer.
+		<div class="window">
+			<div class="title-bar">
+				<div class="title-bar-text">Jay's Website</div>
+				<div class="title-bar-controls">
+					<button aria-label="Minimize"></button>
+					<button aria-label="Maximize"></button>
+					<button aria-label="Close"></button>
+				</div>
+			</div>
+			<div class="window-body">
+				Hi, I'm Jay. I'm an engineer and product designer.
 
-		<br />
-		<br />
+				<br />
+				<br />
 
-		> Interests
-		<br />
-		<br />
-		In school, I had interests in hardware/software co-design, software
-		architecture and robotics. After taking a few jobs throughout college, I
-		developed a deep interest in web infrastructure and developing the
-		future of the internet.
+				> Interests
+				<br />
+				<br />
+				In school, I had interests in hardware/software co-design, software
+				architecture and robotics. After taking a few jobs throughout college, I
+				developed a deep interest in web infrastructure and developing the
+				future of the internet.
 
-		<br />
-		<br />
-		> Past
-		<br />
-		<br />
-		Most recently, I worked on
-		<a href="https://getreploy.com">Reploy</a> (<a
-			href="https://www.producthunt.com/posts/reploy"
-			>product hunt</a
-		>, <a href="https://news.ycombinator.com/item?id=23917956">hn</a>),
-		where I built/designed the product and drove sales from 0 -> $3k MRR in
-		3 weeks. At its core, Reploy used
-		<a href="https://kubernetes.io/">kubernetes</a> to schedule ephemeral
-		environments.
+				<br />
+				<br />
+				> Past
+				<br />
+				<br />
+				Most recently, I worked on
+				<a href="https://getreploy.com">Reploy</a> (<a
+					href="https://www.producthunt.com/posts/reploy"
+					>product hunt</a
+				>, <a href="https://news.ycombinator.com/item?id=23917956">hn</a>),
+				where I built/designed the product and drove sales from 0 -> $3k MRR in
+				3 weeks. At its core, Reploy used
+				<a href="https://kubernetes.io/">kubernetes</a> to schedule ephemeral
+				environments.
 
-		<br />
-		<br />
-		Before that, I spent time working on product at
-		<a target="_blank" href="https://joinhandshake.com">Handshake</a>,
-		anti-abuse infrastructure at
-		<a target="_blank" href="https://cloud.google.com">Google</a>, and most
-		recently on machine learning infra at
-		<a target="_blank" href="deepmind.com">Deepmind</a>. In high school, I
-		was a captain of the 2015 FTC World Championship
-		<a
-			target="_blank"
-			href="https://www.theledger.com/article/LK/20140313/News/608076751/LL/"
-			>Robotics team</a
-		>, which started my wanderings in tech.
+				<br />
+				<br />
+				Before that, I spent time working on product at
+				<a target="_blank" href="https://joinhandshake.com">Handshake</a>,
+				anti-abuse infrastructure at
+				<a target="_blank" href="https://cloud.google.com">Google</a>, and most
+				recently on machine learning infra at
+				<a target="_blank" href="deepmind.com">Deepmind</a>. In high school, I
+				was a captain of the 2015 FTC World Championship
+				<a
+					target="_blank"
+					href="https://www.theledger.com/article/LK/20140313/News/608076751/LL/"
+					>Robotics team</a
+				>, which started my wanderings in tech.
 
-		<br />
-		<br />
-		> Let's Chat
-		<br />
-		<br />
-		Wanna get in touch? Follow/dm me on
-		<a
-			href="https://twitter.com/intent/follow?ref_src=twsrc%5Etfw&screen_name=Jay_NotTheBird&tw_p=followbutton"
-			>twitter</a
-		>, shoot me an email at j [at] jaykhatri.com or yell my name really
-		loudly 🎤 (it works, I promise).
+				<br />
+				<br />
+				> Let's Chat
+				<br />
+				<br />
+				Wanna get in touch? Follow/dm me on
+				<a
+					href="https://twitter.com/intent/follow?ref_src=twsrc%5Etfw&screen_name=Jay_NotTheBird&tw_p=followbutton"
+					>twitter</a
+				>, shoot me an email at j [at] jaykhatri.com or yell my name really
+				loudly (it works, I promise).
+			</div>
+		</div>
 	</body>
 </html>
