--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 	<header><title>Jay K.</title></header>
 	<link rel="stylesheet" type="text/css" href="index.css" />
 	<link rel="stylesheet" href="https://unpkg.com/xp.css" />
-	<script>
+		<script>
 		window["_h_debug"] = true;
-		window["_h_script"] = "http://localhost:8080/dist/index.js";
-		window["_h_org"] = 2;
+	!function(e,t){"object"==typeof exports&&"object"==typeof module?module.exports=t():"function"==typeof define&&define.amd?define([],t):"object"==typeof exports?exports.$=t():e.$=t()}(window,(function(){return function(e){var t={};function n(r){if(t[r])return t[r].exports;var i=t[r]={i:r,l:!1,exports:{}};return e[r].call(i.exports,i,i.exports,n),i.l=!0,i.exports}return n.m=e,n.c=t,n.d=function(e,t,r){n.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},n.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},n.t=function(e,t){if(1&t&&(e=n(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(n.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var i in e)n.d(r,i,function(t){return e[t]}.bind(null,i));return r},n.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return n.d(t,"a",t),t},n.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},n.p="",n(n.s=0)}([function(e,t,n){"use strict";var r;n.r(t),n.d(t,"H",(function(){return o}));var i=document.createElement("script"),o={init:function(e,t){void 0===t&&(t=!1),i.addEventListener("load",(function(){(r=new window.Highlight(t)).initialize(e)}))},identify:function(e,t){o.onHighlightReady((function(){return r.identify(e,t)}))},onHighlightReady:function(e){var t=setInterval((function(){r&&r.ready&&(clearInterval(t),e())}),200)}};window.H=o;i.setAttribute("src","https://static.highlight.run/index.js?"+(new Date).getMilliseconds()),i.setAttribute("type","text/javascript"),document.getElementsByTagName("head")[0].appendChild(i)}])}));
+	window.H.init(17)
 	</script>
-	<script src="http://localhost:8080/dist/firstload.js" />
 	<script>
 		var num = Math.round(Math.random());
 		if (num == 0) {
