--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </p>
       <h2>Past</h2>
       <p>
-        Most recently, I went through <a href="ycombinator.com">YCombinator (S20)</a> with a company called 
+        Most recently, I went through <a href="https://ycombinator.com">YCombinator (S20)</a> with a company called 
         <a href="https://www.producthunt.com/posts/reploy">Reploy</a>, 
         where I built/designed the product and drove sales. At its core, Reploy
         used <a href="https://kubernetes.io/">kubernetes</a> to schedule
