--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <body>
     <div class="content">
+	  <img class="profile-pic" src="static/profile.png">
       <h1>I'm Jay. I'm working on
         <a target="_blank" href="https://highlight.io">Highlight</a>.
 
