--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <p>
         Wanna get in touch? Follow/dm me on
         <a
-          href="https://twitter.com/intent/follow?ref_src=twsrc%5Etfw&screen_name=Jay_NotTheBird&tw_p=followbutton"
+          href="https://twitter.com/theJayKhatri"
           >twitter</a
         > or shoot me an email at jay [at] highlight.io
       </p>
