--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
       />
       <h1>
         I'm Jay. I'm working on
-        <a target="_blank" href="https://highlight.io">Highlight</a>.
+        <a target="_blank" href="https://highlight.io">Highlight.io</a>.
       </h1>
       <p>
-        Welcome to this site. If you want to get in touch, dm me on
+        If you want to get in touch, dm me on
         <a href="https://x.com/theJayKhatri">x</a>, <a href="https://linkedin.com/in/jay-khatri">linkedin </a>, or <a href="mailto:jay@highlight.io">email</a>. More details about what I'm up to below 👇.
       </p>
       <h3>Current</h3>
-      <p>I'm currently the ceo @ <a href="https://highlight.io">Highlight.io</a>; we're building an <a href="https://github.com/highlight/highlight">open source</a> observability distribution. If you're interested in getting in touch about hiring, partnerships, or anything else, please reach out.</p>
+      <p>I'm currently the ceo @ <a href="https://highlight.io">Highlight.io</a>; we're building an <a href="https://github.com/highlight/highlight">open source</a> observability distribution.</p>
       <h3>Investing</h3>
-      <p>Given that we work with lots of startups at Highlight, I occasionally invest in founders who I develop good relationships with. Another requirement of mine is that these business are in the dev-tools/infra spaces. Some of the public investments I've made include <a href="https://openmeter.io">OpenMeter</a>, <a href="https://magicpatterns.com">MagicPatterns</a>, and <a href="https://trigger.dev">Trigger.dev</a>.</p>
-      <h2>Past</h3>
+      <p>Given that we work with lots of startups at Highlight, I occasionally invest in founders who I develop good relationships with. Most of these businesses are in the dev-tools/infra spaces. Some of the public investments I've made include <a href="https://openmeter.io">OpenMeter</a>, <a href="https://magicpatterns.com">MagicPatterns</a>, and <a href="https://trigger.dev">Trigger.dev</a>.</p>
+      <h3>Past</h3>
       <p>
         In school, I had interests in hardware/software co-design, software
         architecture and robotics. After taking a few jobs throughout college, I
