--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <a href="https://x.com/theJayKhatri">x</a>, <a href="https://linkedin.com/in/jay-khatri">linkedin </a>, or <a href="mailto:jay@highlight.io">email</a>. More details about what I'm up to below 👇.
       </p>
       <h3>Current</h3>
-      <p>I'm currently the ceo @ <a href="https://highlight.io">Highlight.io</a>; we're building an <a href="https://github.com/highlight/highlight">open source</a> observability distribution.</p>
+      <p>I'm currently the ceo @ Highlight.io; we're building an <a href="https://github.com/highlight/highlight">open source</a> observability distribution.</p>
       <h3>Investing</h3>
       <p>Given that we work with lots of startups at Highlight, I occasionally invest in founders who I develop good relationships with. Most of these businesses are in the dev-tools/infra spaces. Some of the public investments I've made include <a href="https://openmeter.io">OpenMeter</a>, <a href="https://magicpatterns.com">MagicPatterns</a>, and <a href="https://trigger.dev">Trigger.dev</a>.</p>
       <h3>Past</h3>
@@ -119,10 +119,10 @@
       <br/>
       <br/>
         Before working on Highlight, I went through
-        <a href="https://ycombinator.com">YCombinator</a> with a company
+        YCombinator with a company
         called <a href="https://www.producthunt.com/posts/reploy">Reploy</a>,
         where I built/designed the product and drove sales. At its core, Reploy
-        used <a href="https://kubernetes.io/">kubernetes</a> to schedule
+        used Kubernetes to schedule
         ephemeral environments.
         <br />
         <br />
