--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
       </h1>
       <p>
         If you want to get in touch, dm me on
-        <a href="https://x.com/theJayKhatri">x</a>, <a href="https://linkedin.com/in/jay-khatri">linkedin </a>, or <a href="mailto:jay@highlight.io">email</a>. More details about what I'm up to below 👇.
+        <a href="https://x.com/theJayKhatri">x</a>, <a href="https://linkedin.com/in/jay-khatri">linkedin </a>, or <a href="mailto:jay@highlight.io">email</a>.
       </p>
       <h3>Current</h3>
-      <p>I'm currently the ceo @ Highlight.io; we're building an <a href="https://github.com/highlight/highlight">open source</a> observability distribution.</p>
-      <h3>Investing</h3>
-      <p>Given that we work with lots of startups at Highlight, I occasionally invest in founders who I develop good relationships with. Most of these businesses are in the dev-tools/infra spaces. Some of the public investments I've made include <a href="https://openmeter.io">OpenMeter</a>, <a href="https://magicpatterns.com">MagicPatterns</a>, and <a href="https://trigger.dev">Trigger.dev</a>.</p>
+
+      <p>I'm currently the ceo @ Highlight.io; we're building an <a href="https://github.com/highlight/highlight">open source</a> observability distribution. I occasionally invest in founders who I develop good relationships with. Most of these businesses are in the dev-tools/infra spaces. Some of the public investments I've made include <a href="https://openmeter.io">OpenMeter</a>, <a href="https://magicpatterns.com">MagicPatterns</a>, and <a href="https://trigger.dev">Trigger.dev</a>.</p>
+
       <h3>Past</h3>
       <p>
         In school, I had interests in hardware/software co-design, software
