--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ I was the CEO at Highlight, which was acquired by LaunchDarkly in March of 2025.
 
         Before that, I spent time working on 
         machine learning infra at
-        Deepmind. 
+        Deepmind, 
         anti-abuse infrastructure at
         Google, and product at
         Handshake,
